--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <html>
 <head>
+  <meta name="google-site-verification" content="Ld9L98OnUNXknblZ1iWcipXt853qH4Ik4Jg0xS9ZH0I" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135671026-1"></script>
 <script>
